0.8.0 - currently working on
- [#2671] Feature: Add model::isEmpty
- [#4591] Fix: Session::setInstance must be static
- [#3996] Fix: Two tests of the templatehelperchild testcase fail
- [#4501] Cleanup: Document the different return types of the mailer factory
- [#4502] Cleanup: Document the different return types of the header proxy factory
- [#4499] Cleanup: Document that LoginManager::LoginUser also may accept NULL
- [#4485] Fix: Add TYPO3 (and extbase) maximum version to ext_emconf.php
- [#4444] Feature: Add a FederalState model and mapper
- [#4454] Fix: Test failures concerning the images in the current Core master
- [#3451] Cleanup: Use TYPO3's autoloader instead of oelib's autoloader
- [#4278] Cleanup: Update the copyright to 2012
- [#4452] Cleanup: Stop using the DATABASE_QUERY_ERROR and DATABASE_RESULT_ERROR constants
- [#4448] Fix: createRestrictedImage fails with latest Core master
- [#4449] Fix: tx_oelib_Object::__destruct must not be abstract
- [#4352] Change: Require PHP 5.3
- [#4453] Cleanup: Use assertSame/assertNotSame instead of assertEquals
- [#4441] Fix: The translator registry must not use forceCharset for TYPO3 >= 4.7
- [#4442] Change: Make UTF-8 the default charset
- [#4434] Fix: Framework::getAutoIncrement and FrameworkTest::getSortingOfRelation need to return integers
- [#4435] Fix: Database::createRecursivePageList needs to return a string even for integer $startPages and zero $recursionDepth
- [#4140] Change: Require TYPO3 4.5
- [#4369] Fix: Test failure with master in tx_seminars_cli_MailNotifierTest
- [#3815] Fix: Throw more meaningful Exceptions
- [#4385] Fix: Model_FrontEndUser::setName has a lowercase "n"
- [#4398] Fix: Make the exception about dead models more helpful
- [#4357] Fix: tx_oelib_Model_FrontEndUser::getGender should use "99" for "undefined"
- [#4347] Fix: Fix missing/incorrect @return and return values
- [#4264] Cleanup: Add the parameter name to all @param