@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#4594] Fix: Google map coordinates are using a decimal comma if the PHP locale is not set correctly
 - [#2671] Feature: Add model::isEmpty
 - [#4591] Fix: Session::setInstance must be static
 - [#3996] Fix: Two tests of the templatehelperchild testcase fail
